--- a/libs/platform/tsconfig.lib.json
+++ b/libs/platform/tsconfig.lib.json
@@ -2,28 +2,16 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "target": "es2015",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [
-      "node"
-    ],
-    "lib": [
-      "dom",
-      "es2018"
-    ]
-  },
-  "angularCompilerOptions": {
-    "skipTemplateCodegen": true,
-    "strictMetadataEmit": true,
-    "enableResourceInlining": true
+    "types": ["node"]
   },
   "exclude": [
     "src/test-setup.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "jest.config.ts",
+    "**/*.test.ts"
   ],
-  "include": [
-    "**/*.ts"
-  ]
+  "include": ["**/*.ts"]
 }
