--- a/libs/server/.eslintrc.json
+++ b/libs/server/.eslintrc.json
@@ -8,15 +8,22 @@
         "plugin:@nrwl/nx/angular",
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
-      "parserOptions": { "project": ["libs/server/tsconfig.*?.json"] },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
-          { "type": "attribute", "prefix": "", "style": "camelCase" }
+          {
+            "type": "attribute",
+            "prefix": "",
+            "style": "camelCase"
+          }
         ],
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "",
+            "style": "kebab-case"
+          }
         ]
       }
     },
