--- a/package.json
+++ b/package.json
@@ -3,82 +3,63 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "nx",
-    "nx": "nx",
-    "start": "node dist/sandbox/main.js",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
-    "affected:apps": "nx affected:apps",
-    "affected:libs": "nx affected:libs",
-    "affected:build": "nx affected:build",
-    "affected:e2e": "nx affected:e2e",
-    "affected:test": "nx affected:test",
-    "affected:lint": "nx affected:lint",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
-    "format": "nx format:write",
-    "format:write": "nx format:write",
-    "format:check": "nx format:check",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
-  "dependencies": {
-    "@angular/animations": "^11.0.0",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "@angular/forms": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/platform-server": "^11.0.0",
-    "@angular/router": "^11.0.0",
-    "@nguniversal/express-engine": "^11.0.1",
-    "@nrwl/angular": "11.0.4",
-    "@rxnode/core": "^0.5.0",
-    "@rxnode/fs": "^0.5.0",
-    "@rxnode/http": "^0.5.0",
-    "express": "^4.15.2",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.10.2"
-  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.1",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.1",
-    "@angular-eslint/template-parser": "0.8.0-beta.1",
-    "@angular/cli": "~11.0.0",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/language-service": "^11.0.0",
-    "@nguniversal/builders": "^11.0.1",
-    "@nrwl/cli": "11.0.4",
-    "@nrwl/cypress": "11.0.4",
-    "@nrwl/eslint-plugin-nx": "11.0.4",
-    "@nrwl/jest": "11.0.4",
-    "@nrwl/tao": "11.0.4",
-    "@nrwl/workspace": "11.0.4",
-    "@types/express": "^4.17.0",
-    "@types/jest": "26.0.8",
-    "@types/node": "12.12.38",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
-    "codelyzer": "^6.0.0",
-    "cypress": "^5.5.0",
-    "dotenv": "6.2.0",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.0.0",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
-    "prettier": "2.1.2",
-    "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "typescript": "~4.0.3"
+    "@angular-devkit/build-angular": "~14.2.0",
+    "@angular-eslint/eslint-plugin": "~14.0.0",
+    "@angular-eslint/eslint-plugin-template": "~14.0.0",
+    "@angular-eslint/template-parser": "~14.0.0",
+    "@angular/cli": "~14.2.0",
+    "@angular/compiler-cli": "~14.2.0",
+    "@angular/language-service": "~14.2.0",
+    "@nrwl/angular": "14.6.4",
+    "@nrwl/cli": "14.6.4",
+    "@nrwl/cypress": "14.6.4",
+    "@nrwl/eslint-plugin-nx": "14.6.4",
+    "@nrwl/jest": "14.6.4",
+    "@nrwl/linter": "14.6.4",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/workspace": "14.6.4",
+    "@rxnode/fs": "1.0.0",
+    "@rxnode/http": "1.0.0",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "~5.33.1",
+    "@typescript-eslint/parser": "~5.33.1",
+    "cypress": "^10.2.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "~12.2.0",
+    "ng-packagr": "~14.2.0",
+    "nx": "14.6.4",
+    "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "~4.7.2"
+  },
+  "dependencies": {
+    "@angular/animations": "~14.2.0",
+    "@angular/common": "~14.2.0",
+    "@angular/compiler": "~14.2.0",
+    "@angular/core": "~14.2.0",
+    "@angular/forms": "~14.2.0",
+    "@angular/platform-browser": "~14.2.0",
+    "@angular/platform-browser-dynamic": "~14.2.0",
+    "@angular/router": "~14.2.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   }
 }
